--- a/pages/index.html
+++ b/pages/index.html
@@ -8,23 +8,26 @@
 </head>
 <body>
     <div class="container-header">
+
+
+
         <nav class="navbar flex">
             <h1 class="header-logo primary-font">
                 Header Logo
             </h1>
 
-            <ul class="links flex secondary-font">
-                <a href="link-1" class="link">
-                    link1
-                </a>
-                <a href="link-2" class="link">
-                    link2
-                </a>
-                <a href="link-2" class="link">
-                    link3
-                </a>
-            </ul>
-        </nav>
+        <ul class=" links flex secondary-font">
+            <a href="link-1" class="link">
+                Link 1
+            </a>
+            <a href="link-2" class="link">
+                Link 2
+            </a>
+            <a href="link-2" class="link">
+                Link 3  
+            </a>
+        </ul>
+        
         <header class="header flex">
             <h1 class="header-title primary-font flex">
                 This Website is <br>Awesome
