--- a/pages/index.html
+++ b/pages/index.html
@@ -82,7 +82,7 @@
                 title. It's a smaller font and the
                 color is lower contrast.
             </p>
-            <button class="sign-up-button button">
+            <button class="sign-up-button button flex tertiary-font">
                 Sign Up
             </button>
 
