font changes in header logo and containers for html

--- a/pages/index.html
+++ b/pages/index.html
@@ -22,7 +22,7 @@
     </ul>
     
     <nav class="navbar flex">
-        <h1 class="header-logo secondary-font">
+        <h1 class="header-logo tertiary-font">
             Header Logo
         </h1>
 
@@ -44,69 +44,28 @@
                 </a>
             </ul> -->
     </nav>
+
+    <header class="header container container-header flex">
+        <h1 class="header-title primary-font flex">
+            This Website is <br>Awesome
+        </h1>
+        <p class="header-p tertiary-font">
+            This website has some subtext
+            that goes here under the main
+            title. It's a smaller font and the
+            color is lower contrast.
+        </p>
+        <button class="sign-up-button button flex tertiary-font">
+            Sign Up
+        </button>
+
+    </header>
     
-    <div class="container-header">
+    <section class="container container-section-1 flex">
+
+    </section>
 
 
-        <!-- <nav class="navbar flex">
-            <h1 class="header-logo secondary-font">
-                Header Logo
-            </h1>
-
-            <div class="ham-menu">
-                <span></span>
-                <span></span>
-                <span></span>
-            </div>
-
-            <ul class="nav-menu links flex secondary-font">
-                <a href="link-1" class="link">
-                    Link 1
-                </a>
-                <a href="link-2" class="link">
-                    Link 2
-                </a>
-                <a href="link-2" class="link">
-                    Link 3  
-                </a>
-            </ul>
-        </nav> -->
-
-        <header class="header flex">
-            <h1 class="header-title primary-font flex">
-                This Website is <br>Awesome
-            </h1>
-            <p class="header-p tertiary-font">
-                This website has some subtext
-                that goes here under the main
-                title. It's a smaller font and the
-                color is lower contrast.
-            </p>
-            <button class="sign-up-button button flex tertiary-font">
-                Sign Up
-            </button>
-
-        </header>
-
-    </div>
-
-    <div class="space">
-        <br><br><br><br><br><br><br><br><br>
-        <br><br><br><br><br><br><br><br><br>
-        <br><br><br><br><br><br><br><br><br>
-        <br><br><br><br><br><br><br><br><br>
-        <br><br><br><br><br><br><br><br><br>
-        <br><br><br><br><br><br><br><br><br>
-        <br><br><br><br><br><br><br><br><br>
-        <br><br><br><br><br><br><br><br><br>
-        <br><br><br><br><br><br><br><br><br>
-        <br><br><br><br><br><br><br><br><br>
-        <br><br><br><br><br><br><br><br><br>
-        <br><br><br><br><br><br><br><br><br>
-        <br><br><br><br><br><br><br><br><br>
-        <br><br><br><br><br><br><br><br><br>
-        <br><br><br><br><br><br><br><br><br>
-    </div>
 
 </body>
 </html>
