section 1 added in, images inserted, image sizing needs adjustments. Font sizes might need adjustment as well, might wait until tablet formatting.

--- a/pages/index.html
+++ b/pages/index.html
@@ -47,8 +47,12 @@
 
     <header class="header container container-header flex">
         <h1 class="header-title primary-font flex">
-            This Website is <br>Awesome
+            This Website is Awesome
         </h1>
+
+        <img src="../assets/frame-image.jpg" 
+            alt="image of picture frames" class="header-image">
+
         <p class="header-p tertiary-font">
             This website has some subtext
             that goes here under the main
@@ -62,6 +66,43 @@
     </header>
     
     <section class="container container-section-1 flex">
+        <h2 class="subtitle tertiary-font flex">
+            Some random information.
+        </h2>
+
+        <ul class="card-list flex">
+            <li class="card flex card-1">
+                <img src="../assets/image-flower.jpg" 
+                    alt="a daisy with a lavender backdrop" class="card-img">
+                <p class="card-description tertiary-font">
+                    This is some subtext under an illustration
+                    or image.
+                </p>
+            </li>
+            <li class="card flex card-2">
+                <img src="../assets/image-fruit-smiley.jpg" 
+                    alt="a smiley face made out of fruit" class="card-img">
+                <p class="card-description tertiary-font">
+                    This is some subtext under an illustration
+                    or image.
+                </p>
+            </li>
+            <li class="card flex card-3">
+                <img src="../assets/image-painting" 
+                    alt="a painting of a tunnel" class="card-img">
+                <p class="card-description tertiary-font">
+                    This is some subtext under an illustration
+                    or image.
+                </p>
+            </li>
+            <li class="card flex card-4">
+                <img src="../assets/image-strawberry.jpg" alt="a strawberry" class="card-img">
+                <p class="card-description tertiary-font">
+                    This is some subtext under an illustration
+                    or image.
+                </p>
+            </li>       
+        </ul>
 
     </section>
 
