image section added.

--- a/pages/index.html
+++ b/pages/index.html
@@ -10,11 +10,11 @@
 <body>
     
     <ul class="off-screen-menu links flex primary-font">
-        <a href="link-1" class="link">
-            Link 1
+        <a href="#header" class="link">
+            Header
         </a>
-        <a href="link-2" class="link">
-            Link 2
+        <a href="#section-1" class="link">
+            Section 1
         </a>
         <a href="link-2" class="link">
             Link 3  
@@ -45,7 +45,7 @@
             </ul> -->
     </nav>
 
-    <header class="header container container-header flex">
+    <header id="header" class="header container container-header flex">
         <h1 class="header-title primary-font flex">
             This Website is Awesome
         </h1>
@@ -65,9 +65,9 @@
 
     </header>
     
-    <section class="container container-section-1 flex">
+    <section id="section-1" class="container container-section-1 flex">
         <h2 class="subtitle tertiary-font flex">
-            Some random information.
+            Some random information
         </h2>
 
         <ul class="card-list flex">
@@ -80,16 +80,16 @@
                 </p>
             </li>
             <li class="card flex card-2">
-                <img src="../assets/image-fruit-smiley.jpg" 
-                    alt="a smiley face made out of fruit" class="card-img">
+                <img src="../assets/image-butterfly-daisy.jpg" 
+                    alt="a photo of a butterfly on a flower" class="card-img">
                 <p class="card-description tertiary-font">
                     This is some subtext under an illustration
                     or image.
                 </p>
             </li>
             <li class="card flex card-3">
-                <img src="../assets/image-painting" 
-                    alt="a painting of a tunnel" class="card-img">
+                <img src="../assets/image-fruit-smiley.jpg" 
+                    alt="a smiley face made out of fruit" class="card-img">
                 <p class="card-description tertiary-font">
                     This is some subtext under an illustration
                     or image.
