added section 3 quote.

--- a/pages/index.html
+++ b/pages/index.html
@@ -16,8 +16,11 @@
         <a href="#section-1" class="link">
             Section 1
         </a>
-        <a href="link-2" class="link">
-            Link 3  
+        <a href="#section-2" class="link">
+            Section 2
+        </a>
+        <a href="#section-3" class="link">
+            Section 3
         </a>
     </ul>
     
@@ -103,6 +106,20 @@
                 </p>
             </li>       
         </ul>
+
+    </section>
+
+    <section id="section-2" class="container container-section-2 flex">
+
+        <p class="quote secondary-font flex">
+            This is an inspiring quote, or a testimonial from a
+            customer. Maybe it's just filling up space, or maybe 
+            people will actually read it. Who knows? All I know 
+            is that it looks nice.
+        </p>
+        <p class="secondary-font quote-author flex">
+            -Thor, God of Thunder
+        </p>
 
     </section>
 
