sectiion-3 call to action added. Needs formatting still - possible issue with section-3 containers, possible refraction needed.

--- a/pages/index.html
+++ b/pages/index.html
@@ -69,7 +69,7 @@
     </header>
     
     <section id="section-1" class="container container-section-1 flex">
-        <h2 class="subtitle tertiary-font flex">
+        <h2 class="section-1-title tertiary-font flex">
             Some random information
         </h2>
 
@@ -120,10 +120,23 @@
         <p class="secondary-font quote-author flex">
             -Thor, God of Thunder
         </p>
-
     </section>
 
-
+    <section class="container flex">
+        <div class="container-section-3 flex">
+            <div class="call-to-action flex">
+                <h2 class="section-3-title secondary-font flex">
+                    Call to action!<br>It's time!
+                </h2>
+                <p class="tertiary-font flex">
+                    Sign up for our product by clicking that button right over there!
+                </p>
+            </div>
+            <button class="sign-up-button button flex tertiary-font">
+                Sign Up
+            </button>
+        </div>
+    </section>
 
 </body>
 </html>
