call to action section added.

--- a/pages/index.html
+++ b/pages/index.html
@@ -126,9 +126,9 @@
         <div class="container-section-3 flex">
             <div class="call-to-action flex">
                 <h2 class="section-3-title secondary-font flex">
-                    Call to action!<br>It's time!
+                    Call to action! It's time!
                 </h2>
-                <p class="tertiary-font flex">
+                <p class="call-to-action-p tertiary-font flex">
                     Sign up for our product by clicking that button right over there!
                 </p>
             </div>
