styling and sizing issues fixed.

--- a/pages/index.html
+++ b/pages/index.html
@@ -161,7 +161,7 @@
 
             </div>
 
-            <button class="sign-up-button button flex tertiary-font">
+            <button class="sign-up-button header-button button flex tertiary-font">
                 Sign Up
             </button>
 
