hidden nav menu bugg fixed, rearranged html. nav menu position fixed. code cleaning. Issue found with click of hamburger menu, needs to be at specific spots.

--- a/pages/index.html
+++ b/pages/index.html
@@ -9,6 +9,8 @@
 </head>
 <body>
     
+    <nav class="navbar flex">
+
     <ul class="off-screen-menu links flex primary-font">
 
         <a href="#header" class="link">
@@ -28,8 +30,6 @@
         </a>
 
     </ul>
-    
-    <nav class="navbar flex">
 
         <h1 class="header-logo tertiary-font">
             Header Logo
@@ -147,7 +147,7 @@
 
     <section class="container flex">
 
-        <div class="container-section-3 flex">
+        <div id="section-3" class="container-section-3 flex">
 
             <div class="call-to-action flex">
 
